tests/samples/invalid/invalid_escape_hex.pn
fn foo()
{
	var x = "Is \x1 a valid escape?";
}
